# Perseus

./: .eslintignore  .eslintrc.js  .gitmodules  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
src-backend/: Cargo.toml  README.md  rustfmt.toml
src-backend/libformat/: Cargo.toml  readme.md
src-backend/libformat/asset/opendrive/: Ex_LHT-Complex-X-Junction.xodr  Ex_Lane-Width.xodr  Ex_Line-Spiral-Arc.xodr  Ex_Parkingspace_Rectangular.xodr  Ex_Parkingspace_rhomboid.xodr  Ex_Simple-LaneOffset.xodr  Ex_TrafficIsland-CornerRoad.xodr  UC_2Lane-RoundAbout-3Arms.xodr  UC_Simple-X-Junction-TrafficLights.xodr  UC_Simple-X-Junction.xodr  UC_X_Junction.xodr  direct_junction_simple.xodr  explicit_line.xodr  mixed_roads.xodr  mw_100m.xodr  road_straight_curve_junction.xodr  slope_up_slope_down.xodr  some_signs.xodr
src-backend/libformat/asset/openscenario/: CloseVehicleCrossing.xosc  ControllerCatalog.xosc  CutIn.xosc  DoubleLaneChanger.xosc  EndOfTrafficJam.xosc  EndofTrafficJamNeighboringLaneOccupied.xosc  Example_AniAction_LightAction_Veh_User.xosc  Example_Catalog_noName.xosc  Example_ControllerAction.xosc  Example_LightAction_User.xosc  Example_LightAction_Veh.xosc  Example_Phase.xosc  Example_RoadPosition_NoOrientation.xosc  Example_RoadPosition_Orientation.xosc  HWManeuvers.xosc  Overtaker.xosc  RoutesAtFabriksgatan.xosc  RoutesAtMultiIntersections.xosc  SlowPrecedingVehicle.xosc  SlowPrecedingVehicleDeterministicParameterSet.xosc  TrailerConnect.xosc  VehiclePropertyTest.xosc  acc-test.xosc  acc-toggle.xosc  add_delete_entity.xosc  alks-test.xosc  alks_cut-in.xosc  alks_cut-out.xosc  alks_decelerate.xosc  alks_pedestrian.xosc  alks_r157_cut_in_quick_brake.xosc  alks_r157_quick_stop_test.xosc  alks_r157_test.xosc  bike_tilt_smooth.xosc  brake_by_trajectory_100-0.xosc  circular_road.xosc  conflicting-domains.xosc  consecutive_roads.xosc  controller_test.xosc  curve_slope_simple.xosc  (+97 more)
src-backend/libformat/src/: lib.rs  pretty_xml.rs
src-backend/libformat/src/mjcf/: actuator.rs  asset.rs  body.rs  contact.rs  custom.rs  default.rs  deformable.rs  equality.rs  extension.rs  keyframe.rs  meta.rs  mod.rs  sensor.rs  tendon.rs  util.rs  visual.rs
src-backend/libformat/src/opendrive/: common.rs  custom_extension.rs  header.rs  junction.rs  lane.rs  mod.rs  object.rs  odr_coverage.txt  railroad.rs  road.rs  signal.rs  station.rs
src-backend/libformat/src/openscenario/: base_enum.rs  catalog.rs  common.rs  condition.rs  entity.rs  header.rs  mod.rs  parameter_value_distribution.rs  road_network.rs  storyboard.rs
src-backend/libformat/src/openscenario/preprocess/: OpenSCENARIO.xsd  context_tree.rs  expression.rs  mod.rs  validator.rs
src-backend/libformat/src/sdf/: actor.rs  collision.rs  geometry.rs  joint.rs  light.rs  link.rs  material.rs  mod.rs  model.rs  physics.rs  scene.rs  sensor.rs  state.rs  util.rs  visual.rs  world.rs
src-backend/libgaussiansplatting/: Cargo.toml
src-backend/libgaussiansplatting/src/: gs_scene.rs  lib.rs
src-backend/libmap/: Cargo.toml  build.rs  readme.md
src-backend/libmap/src/: generator.rs  lib.rs  map.rs
src-backend/libmap/src/common/: kdtree2d.rs  kdtree_box.rs  math.rs  mod.rs  plotter.rs  util.rs
src-backend/libmap/src/element/: clean_area.rs  header.rs  junction.rs  lane.rs  line.rs  line_curve.rs  mod.rs  road.rs  site.rs
src-backend/libmap/src/element/line_segment/: arc.rs  mod.rs  spiral.rs  straight.rs
src-backend/libmap/src/proto/: map.proto
src-backend/libmap/src/proto_gen/: map.rs  mod.rs
src-backend/libmodel/: Cargo.toml
src-backend/libmodel/asset/sanitation/: 1.xml  2.xml
src-backend/libmodel/src/: lib.rs
src-backend/libmodel/src/sanitation/: environment.rs  garbage.rs  header.rs  mod.rs  readme.md  sanitationman.rs  scenario.rs  station.rs  task.rs  traffic_flow.rs  util.rs  vehicle.rs
src-backend/libphysic/: Cargo.toml
src-backend/libsimulator/: Cargo.toml
src-backend/libsimulator/src/: error.rs  lib.rs
src-backend/libsimulator/src/map/: file_map_service.rs  mod.rs
src-backend/libsimulator/src/scenario/: file_sanitation_scenario_service.rs  mod.rs
src-backend/libsimulator/src/simulator/: mod.rs  sanitation_service.rs  sanitation_simulator.rs
src-backend/libutil/: Cargo.toml
src-backend/libutil/src/: lib.rs  log.rs
src-backend/libutil/src/eventbus/: bus.rs  key.rs  mod.rs  value.rs
src-backend/libwebserver/: Cargo.toml
src-backend/libwebserver/src/: lib.rs
src-backend/libwebserver/src/api/: map.rs  mod.rs  scenario.rs  simulator.rs
src-backend/libwebserver/src/ws/: lobby.rs  mod.rs
src-backend/perseus-api/: Cargo.toml  README.md
src-backend/perseus-api/src/: lib.rs
src-backend/perseus-py/: Cargo.toml  README.md  pyproject.toml
src-backend/perseus-py/example/: bullet_example.py  hello.py
src-backend/perseus-py/src/: lib.rs  remote(unused).rs
src-backend/perseus-py/src/map/: clean_area.rs  junction.rs  lane.rs  mod.rs  road.rs  site.rs  waypoint.rs
src-backend/perseus-py/src/world/: environment.rs  garbage.rs  mod.rs  sanitation.rs  scenario.rs  station.rs  task.rs  traffic_flow.rs  vehicle.rs
src-tauri/: tauri.conf.json
src-wasm/: readme.md
src-wasm/lib3dgs/: Cargo.toml
src-wasm/lib3dgs/src/: gsplat.vert  helper.js  lib.rs  renderer.rs  scene.rs  utils.rs
src-wasm/libexample/: .gitignore  Cargo.toml
src-wasm/libexample/src/: lib.rs
src/app/: layout.tsx  meta.ts  page.tsx  theme.ts
src/app/error/: page.tsx
src/app/login/: page.tsx  page2.tsx
src/app/main/: LeftSideBar.tsx  PannelContainer.tsx  StatusBar.tsx  TitleBar.tsx  ToolBar.tsx  page.tsx
src/app/main/component/: HorizontalResizableBox.tsx  VerticalResizeBox.tsx
src/app/map/: eventbus.ts  hdmap.tsx  page.tsx
src/app/map/control/: controller.ts
src/app/map/model/: clean_area.ts  header.ts  junction.ts  lane.ts  line_curve.ts  map.ts  (+3 more)
src/context/: AntdProvider.tsx  SidebarContext.tsx  use-media-query.ts
src/interface/lib/: api_typing.d.ts  request.ts
src/interface/utils/: constants.ts  storage.ts  time.ts  url.ts
src/proto/: map.proto
(+6 files in other folders)
