[package]
name = 'perseus-service'
version = '0.0.1'
edition = '2021'


[[bin]]
name = 'sanitation_simulator'
path = './bin/sanitation_simulator.rs'

[[bin]]
name = 'editor'
path = './bin/editor.rs'

[profile.release]
panic = 'abort'


[workspace]
members = ['libutil', 'libformat', "libphysic", "libmap", "libsimulator", "libwebserver", "perseus-api", "perseus-py", "libmodel"]

[dependencies]
libutil = { path = './libutil' }
libformat = { path = './libformat' }
libmap = { path = './libmap' }
libsimulator = { path = './libsimulator' }
libwebserver = { path = './libwebserver' }
libmodel = { path = './libmodel' }
dashmap.workspace = true
clap.workspace = true
anyhow.workspace = true
clap-handler.workspace = true
clap_complete.workspace = true
time.workspace = true
time-macros.workspace = true
tracing.workspace = true
tracing-core.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }
tracing-appender.workspace = true

jemallocator = "0.5.0"
jemalloc-ctl = "0.5.0"
jemalloc-sys = { version = "0.5.3", features = [
    "stats",
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
] }
lazy_static.workspace = true

[workspace.dependencies]
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }
tracing-appender = "0.2.2"
time = { version = "0.3.10" }
typenum = "1.15.0"
ctrlc = { version = "3.0", features = ["termination"] }
chrono = "0.4.23"
tokio = { version = "1.25.0", features = ["full"] }
walkdir = "2.3.2"
crossbeam-channel = "0.5.7"
clap = { version = "4.1.6", features = ["derive"] }
anyhow = "1"

clap-handler = "0.1.1"
clap_complete = "4.5.9"
serde_json = "1.0"
serde = { version = "1.0.200", features = ["derive"] }

num_cpus = "1.16.0"
rand = "0.8.5"
config = { version = "0.13.4", default-features = false, features = ["yaml"] }
hostname = "0.3.1"
signal-hook = "0.3.17"
pprof = { version = "0.13.0", features = ["flamegraph", "protobuf-codec"] }
local-ip-address = "0.5.6"
serde_with = "3.7.0"
quick-xml = { version = "0.31.0", features = ["serialize", "serde-types"] }
time-macros = "0.2.18"
#duckdb = { version = "1.0.0", features = ["bundled"] }
dashmap = "6.0.1"
lazy_static = "1.4.0"
protobuf = "3.5.0"
actix = "0.13.5"
actix-cors = "0.7.0"
actix-http = "3.8.0"
actix-web = "4.8.0"
actix-web-actors = "4.3.0"
futures-util = "0.3.30"
once_cell = "1.19.0"
async-trait = "0.1.81"
bytes = "1.6.0"
actix-multipart = "0.7.2"

[features]
default = ["offline"]
offline = ["libwebserver/offline"]
