

[profile.release]
panic = 'abort'
# lto = true # VERY slightly smaller wasm
# opt-level = 's' # 10-20% smaller wasm compared to `opt-level = 3`
# opt-level = 1 # very slow and big wasm. Don't do this.
#opt-level = 2 # fast and small wasm, basically same as `opt-level = 's'`
# opt-level = 3 # unnecessarily large wasm for no performance gain

# debug = true # include debug symbols, useful when profiling wasm


[workspace]
resolver = "2"
members = [
    'libutil',
    'libformat',
    "libphysic",
    "libmap",
    "libsimulator",
    "libwebserver",
    "perseus-api",
    "perseus-py",
    "libmodel",
    "bin/*"
]

[workspace.dependencies]
libutil = { version = "1.0.0", path = "./libutil"}
libformat = { version = "1.0.0", path = "./libformat"}
libphysic = { version = "1.0.0", path = "./libphysic"}
libmap = { version = "1.0.0", path = "./libmap"}
libsimulator = { version = "1.0.0", path = "./libsimulator"}
libwebserver = { version = "1.0.0", path = "./libwebserver"}
perseus-py = { version = "1.0.0", path = "./perseus-py"}
libmodel = { version = "1.0.0", path = "./libmodel"}


tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }
tracing-appender = "0.2.2"
time = { version = "0.3.10" }
typenum = "1.15.0"
ctrlc = { version = "3.0", features = ["termination"] }
chrono = "0.4.23"
tokio = { version = "1.25.0", features = ["full"] }
walkdir = "2.3.2"
crossbeam-channel = "0.5.7"
clap = { version = "4.1.6", features = ["derive"] }
anyhow = "1"

clap-handler = "0.1.1"
clap_complete = "4.5.9"
serde_json = "1.0"
serde = { version = "1.0.200", features = ["derive"] }

num_cpus = "1.16.0"
rand = "0.8.5"
config = { version = "0.13.4", default-features = false, features = ["yaml"] }
hostname = "0.3.1"
signal-hook = "0.3.17"
pprof = { version = "0.13.0", features = ["flamegraph", "protobuf-codec"] }
local-ip-address = "0.5.6"
serde_with = "3.7.0"
quick-xml = { version = "0.31.0", features = ["serialize", "serde-types"] }
time-macros = "0.2.18"
#duckdb = { version = "1.0.0", features = ["bundled"] }
dashmap = "6.0.1"
lazy_static = "1.4.0"
protobuf = "3.5.0"
actix = "0.13.5"
actix-cors = "0.7.0"
actix-http = "3.8.0"
actix-web = "4.8.0"
actix-web-actors = "4.3.0"
futures-util = "0.3.30"
once_cell = "1.19.0"
async-trait = "0.1.81"
bytes = "1.6.0"
actix-multipart = "0.7.2"


