[package]
name = "libmap"
version = "1.0.0"
edition = "2021"

[dependencies]
libformat = { workspace = true}

anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-core = { workspace = true }
plotlib = "0.5.1"
plotters = "0.3.6"
protobuf = { workspace = true }




[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"

[features]
default=[]
