[package]
name = "libsimulator"
version = "1.0.0"
edition = "2021"

[dependencies]
libmap = { workspace = true}
libformat = { workspace = true}
libutil = { workspace = true}
libmodel = { workspace = true}

anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
tracing = "0.1.40"
serde = { version = "1.0.200", features = ["derive"] }
thiserror = "1.0.60"