[package]
name = "perseus-py"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "perseus"
crate-type = ["cdylib"]

[dependencies]
libmap = { workspace = true}
libutil = { workspace = true}
libsimulator = { workspace = true}
libmodel = { workspace = true}

pyo3 = "0.22.0"
once_cell = "1.19.0"
smol = "2.0.0"
lazy_static.workspace = true

[features]
default=[]
