[package]
name = "libexample"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"

[dependencies.web-sys]
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'Window',
]

[profile.release]
lto = true
opt-level = "z"
debug = false
